--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
+    <style>
+        p {
+            color:violet;
+        }
+    </style>
+
 </head>
 <body>
     <h1>Hello</h1>
 
-    <p style="color: blue;">Welcome to Home!</p>
+    <p >Welcome to Home!</p>
 
     <p>this is a test</p>
     <p>This is a pull for client</p>
