--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello</h1>
 
-    <p style="color: blue;">Welcome to Home!</p>
+    <p style="color: blue;">Welcome to Home</p>
 
     <p>this is a test</p>
     <p>This is a pull for client</p>
